# fidmag_rs

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  fi.py  p1  p5  p6  pi.py  py_test
.cargo/: config
benches/: benchmarks.rs
src/: fft.rs  lib.rs  main.rs  plot.rs  utils.rs
