[package]
name = 'fidmag_rs'
version = '0.1.0'
authors = ['Alex Komissarov <k.a.komissar@gmail.com>']
edition = '2018'

[dependencies]
rustfft = '3.0.1'
plotters = '0.2.12'
itertools = '0.8.2'

[dependencies.ndarray]
version = '0.13'
features = ['rayon']

[dev-dependencies]
criterion = '0.3'

[[bench]]
name = "benchmarks"
harness = false
