[package]
name = 'fidmag_rs'
version = '0.1.0'
authors = ['Alex Komissarov <k.a.komissar@gmail.com>']
edition = '2018'

[dependencies]
rustfft = '3.0.1'
plotters = '0.2.12'
itertools = '0.8.2'
blas-src = { version = "0.2.0", default-features = false  }
# openblas-src = { version = "0.6.0", default-features = false, features = ["cblas", "system"] }

[dependencies.ndarray]
version = '0.13'
features = ['blas']

[dev-dependencies]
criterion = '0.3'

[[bench]]
name = "benchmarks"
harness = false
